Fix tabs spacing

--- a/components/tabs.module.css
+++ b/components/tabs.module.css
@@ -2,7 +2,7 @@
   display: flex;
   list-style: none;
   justify-content: row;
-  margin-top: var(--space-8);
+  margin-top: var(--space-16);
   margin-bottom: var(--space-16);
   background-color: var(--color-button);
   overflow: hidden;
